CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c.object
<CustomObject>
    <description>Income information from employment for individual</description>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_PAY__c</fullName>
        <label>How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCH</fullName>
                    <label>Cancelled checks</label>
                </value>
                <value>
                    <fullName>VER</fullName>
                    <label>Collateral Contact</label>
                </value>
                <value>
                    <fullName>CWR</fullName>
                    <label>Colorado Works Referral</label>
                </value>
                <value>
                    <fullName>ELT</fullName>
                    <label>Employment letter</label>
                </value>
                <value>
                    <fullName>LGR</fullName>
                    <label>Ledger</label>
                </value>
                <value>
                    <fullName>OTH</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>OD</fullName>
                    <label>Owner&apos;s Draw</label>
                </value>
                <value>
                    <fullName>PST</fullName>
                    <label>Paystub</label>
                </value>
                <value>
                    <fullName>STB</fullName>
                    <label>Paystubs</label>
                </value>
                <value>
                    <fullName>SML</fullName>
                    <label>Self Employment Letter</label>
                </value>
                <value>
                    <fullName>TF</fullName>
                    <label>Tax Form</label>
                </value>
                <value>
                    <fullName>WNW</fullName>
                    <label>Work Number website</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMT_EXP_ANNUAL_ACTUAL__c</fullName>
        <formula>If( ISBLANK( IDN_EMPLMT_INDIV__r.Total_Number_Of_Expenses__c )|| IDN_EMPLMT_INDIV__r.Total_Number_Of_Expenses__c ==0,0,  IDN_EMPLMT_INDIV__r.Total_Yearly_Expense__c/IDN_EMPLMT_INDIV__r.Total_Number_Of_Expenses__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Annual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROPRIETORSHIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proprietorship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_CBMS_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CBMS Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMT_INCOME_ANNUAL_ACTUAL__c</fullName>
        <formula>If( ISBLANK( Total_Number_Of_Paystubs__c  )||Total_Number_Of_Paystubs__c ==0,0,   (Total_Yearly_Income__c /Total_Number_Of_Paystubs__c)) + Total_One_Time_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <formula>If( ISBLANK( AMT_INCOME_ANNUAL_ACTUAL__c )||AMT_INCOME_ANNUAL_ACTUAL__c ==0,0, AMT_INCOME_ANNUAL_ACTUAL__c /12 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_INCOME_ANNUAL_ESTMD__c</fullName>
        <description>Estimated Annual Income</description>
        <label>Estimated Income</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_PAY_ESTMD__c</fullName>
        <description>Estimated Pay Frequency</description>
        <label>Estimated Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00341</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNT_WEEK_PER_HOURS_ACTUAL__c</fullName>
        <formula>If( ISBLANK( Total_Number_Of_Paystubs__c  )||Total_Number_Of_Paystubs__c ==0,0,    Total_Weekly_Hours_Worked__c  /Total_Number_Of_Paystubs__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Hours per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNT_WEEK_PER_HOURS_ESTMD__c</fullName>
        <description>Estimated Hours per Week</description>
        <label>Estimated Hours per Week</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Income Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_EMPLMT_INDIV__c</fullName>
        <description>Employment ID</description>
        <label>Employment ID</label>
        <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
        <relationshipLabel>Employment Income</relationshipLabel>
        <relationshipName>T_SBSD_INDIV_EMPLMT1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_STUBS_PAY_SUFFT__c</fullName>
        <formula>IF( Total_Number_Of_Worth_Days__c &gt;=30, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Do you have 30 days of pay stubs?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Peak_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Peak Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Least_Pay_Stub_Date__c</fullName>
        <label>Least Pay Stub Date</label>
        <summarizedField>T_EMPLMT_PAY_STUB__c.DTE_PAY__c</summarizedField>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Paystubs__c</fullName>
        <label>Total Number Of Paystubs</label>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_STATUS__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_FREQ_PAY__c</field>
            <operation>notEqual</operation>
            <value>One Time Only</value>
        </summaryFilterItems>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weekly_Hours_Worked__c</fullName>
        <label>Total Weekly Hours Worked</label>
        <summarizedField>T_EMPLMT_PAY_STUB__c.Calculated_Weekly_Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_STATUS__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Yearly_Income__c</fullName>
        <label>Total Yearly Income</label>
        <summarizedField>T_EMPLMT_PAY_STUB__c.Calculated_Yearly_Income__c</summarizedField>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_STATUS__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_FREQ_PAY__c</field>
            <operation>notEqual</operation>
            <value>One Time Only</value>
        </summaryFilterItems>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_One_Time_Income__c</fullName>
        <label>Total One Time Income</label>
        <summarizedField>T_EMPLMT_PAY_STUB__c.Calculated_Yearly_Income__c</summarizedField>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_STATUS__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_EMPLMT_PAY_STUB__c.CDE_FREQ_PAY__c</field>
            <operation>equals</operation>
            <value>One Time Only</value>
        </summaryFilterItems>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>    
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <description>JIRA CHAT - 2779,2778</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00848</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Worth_Days__c</fullName>
        <label>Total Number Of Worth Days</label>
        <summarizedField>T_EMPLMT_PAY_STUB__c.Number_Of_Worth_Days_Per_Frequency__c</summarizedField>
        <summaryForeignKey>T_EMPLMT_PAY_STUB__c.IDN_EMPLMT_INCOME__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Calculated_Annual_Estimated_Income__c</fullName>
        <formula>CASE( TEXT( CDE_FREQ_PAY_ESTMD__c ) ,
&apos;WKY&apos;, AMT_INCOME_ANNUAL_ESTMD__c*4.33*12,
&apos;E2M&apos;, AMT_INCOME_ANNUAL_ESTMD__c*6,
&apos;2PM&apos;, AMT_INCOME_ANNUAL_ESTMD__c*2*12,
&apos;E2W&apos;, (AMT_INCOME_ANNUAL_ESTMD__c/2)*4.33*12,
&apos;HLY&apos;, (AMT_INCOME_ANNUAL_ESTMD__c*CNT_WEEK_PER_HOURS_ESTMD__c*4.33)*12,
&apos;MON&apos;, AMT_INCOME_ANNUAL_ESTMD__c*12,
&apos;QRT&apos;, (AMT_INCOME_ANNUAL_ESTMD__c/3)*12,
&apos;2PY&apos;, AMT_INCOME_ANNUAL_ESTMD__c*2,
&apos;1PY&apos;, AMT_INCOME_ANNUAL_ESTMD__c,
&apos;ONE&apos;, AMT_INCOME_ANNUAL_ESTMD__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Annual Estimated Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employment Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Income ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Estimated_Annual_Income_Greater_than_0</fullName>
        <active>true</active>
        <description>Estimated Annual Income cannot be less than 0.</description>
        <errorConditionFormula>NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; AMT_INCOME_ANNUAL_ESTMD__c&lt;0</errorConditionFormula>
        <errorDisplayField>AMT_INCOME_ANNUAL_ESTMD__c</errorDisplayField>
        <errorMessage>Estimated Annual Income cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Hours_per_Week_Greater_than_0</fullName>
        <active>true</active>
        <description>Estimated Hours per Week cannot be less than 0.</description>
        <errorConditionFormula>NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; CNT_WEEK_PER_HOURS_ESTMD__c&lt;0</errorConditionFormula>
        <errorDisplayField>CNT_WEEK_PER_HOURS_ESTMD__c</errorDisplayField>
        <errorMessage>Estimated Hours per Week cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_if_Estimated_Income_Frequency_is_HLY</fullName>
        <active>true</active>
        <description>Required if CDE_FREQ_PAY_ESTMD = Hourly</description>
        <errorConditionFormula>AND( NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ), ISBLANK(CNT_WEEK_PER_HOURS_ESTMD__c) ,  ISPICKVAL(CDE_FREQ_PAY_ESTMD__c, &apos;HLY&apos;) )</errorConditionFormula>
        <errorDisplayField>CNT_WEEK_PER_HOURS_ESTMD__c</errorDisplayField>
        <errorMessage>Required if Estimated Income Frequency is Hourly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_30_days_Paystub_selected_as_No</fullName>
        <active>true</active>
        <description>Estimated Income ,Estimated Income Frequency and Estimated Hours per week is required when 30 days of  Paystub is selected as No</description>
        <errorConditionFormula>OR(	And( ISNEW(), OR( ISNULL(AMT_INCOME_ANNUAL_ESTMD__c), ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c), ISPICKVAL(CDE_FREQ_PAY_ESTMD__c, '')), text(IDN_EMPLMT_INDIV__r.IND_STUBS_PAY_RCVS__c) =='Y', Is_Peak_Data__c == false ),
	And( NOT( ISNEW() ), ISPICKVAL( CDE_STATUS__c , 'ACT'), OR( ISNULL(AMT_INCOME_ANNUAL_ESTMD__c), ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c), ISPICKVAL(CDE_FREQ_PAY_ESTMD__c, '')), text(IDN_EMPLMT_INDIV__r.IND_STUBS_PAY_RCVS__c) =='Y', Is_Peak_Data__c == false)	)
	      </errorConditionFormula>
        <errorMessage>These required fields must be completed: Estimated Income, Estimated Hours per Week and Estimated Income Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EstimatedHoursWeekRequired</fullName>
        <active>true</active>
        <description>Estimated Hours per Week is required when Estimated Income is Entered</description>
        <errorConditionFormula>OR( AND( ISNEW(),!ISNULL( AMT_INCOME_ANNUAL_ESTMD__c ) ,  ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c  ), Is_Peak_Data__c == false, Is_CBMS_Data__c == false ),
	AND( NOT( ISNEW() ), ISPICKVAL(CDE_STATUS__C, 'ACT'), !ISNULL( AMT_INCOME_ANNUAL_ESTMD__c ) ,  ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c ),Is_Peak_Data__c == false,Is_CBMS_Data__c == false ))
	</errorConditionFormula>
        <errorDisplayField>CNT_WEEK_PER_HOURS_ESTMD__c</errorDisplayField>
        <errorMessage>Estimated Hours per Week is required when Estimated Income is Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_CDE_SOURCE_VRFYD_SE</fullName>
        <active>true</active>
        <description>CDE_SOURCE_VRFYD_PAY is required when CDE_TYPE_VERIF is &quot;Written Verification&quot;</description>
        <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL( CDE_SOURCE_VRFYD_PAY__c, &apos;&apos;),
 ISPICKVAL(CDE_TYPE_VERIF__c, &apos;V&apos;),
 NOT(ISCHANGED(Total_Number_Of_Paystubs__c))
)</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_PAY__c</errorDisplayField>
        <errorMessage>How Verified is required if Verified is &apos;Written Verification&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_CDE_TYPE_VERIF</fullName>
        <active>true</active>
        <description>CDE_TYPE_VERIF is required for Self-Employment</description>
        <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL( CDE_TYPE_VERIF__c, &apos;&apos;),
 ISPICKVAL(CDE_STATUS__c, &apos;ACT&apos;),
 IDN_EMPLMT_INDIV__r.RecordType.DeveloperName = &apos;Self_Employment&apos;
)</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
        <errorMessage>Verified is required for Self Employment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_CDE_TYPE_VERIF_2</fullName>
        <active>true</active>
        <description>CDE_TYPE_VERIF is required for Employment when AMT_INCOME_ANNUAL_ESTMD is not empty</description>
        <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL(CDE_TYPE_VERIF__c , &apos;&apos;),
 ISPICKVAL(CDE_STATUS__c, &apos;ACT&apos;),
 IDN_EMPLMT_INDIV__r.RecordType.DeveloperName = &apos;Employment&apos;,
 AMT_INCOME_ANNUAL_ESTMD__c &gt; 0 
)</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
        <errorMessage>When Estimated Income is used Verified is required</errorMessage>
    </validationRules>
</CustomObject>