CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/Estimated_Annual_Income_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Annual_Income_Greater_than_0</fullName>
    <active>true</active>
    <description>Estimated Annual Income cannot be less than 0.</description>
    <errorConditionFormula>NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; AMT_INCOME_ANNUAL_ESTMD__c&lt;0</errorConditionFormula>
    <errorDisplayField>AMT_INCOME_ANNUAL_ESTMD__c</errorDisplayField>
    <errorMessage>Estimated Annual Income cannot be less than 0.</errorMessage>
</ValidationRule>