CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/EstimatedHoursWeekRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>EstimatedHoursWeekRequired</fullName>
    <active>true</active>
    <description>Estimated Hours per Week is required when Estimated Income is Entered</description>
    <errorConditionFormula>OR( AND( ISNEW(),!ISNULL( AMT_INCOME_ANNUAL_ESTMD__c ) ,  ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c  ), Is_Peak_Data__c == false, Is_CBMS_Data__c == false ),
	AND( NOT( ISNEW() ), ISPICKVAL(CDE_STATUS__c, &apos;ACT&apos;), !ISNULL( AMT_INCOME_ANNUAL_ESTMD__c ) ,  ISNULL(CNT_WEEK_PER_HOURS_ESTMD__c ),Is_Peak_Data__c == false,Is_CBMS_Data__c == false ))</errorConditionFormula>
    <errorDisplayField>CNT_WEEK_PER_HOURS_ESTMD__c</errorDisplayField>
    <errorMessage>Estimated Hours per Week is required when Estimated Income is Entered</errorMessage>
</ValidationRule>