CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/Req_CDE_SOURCE_VRFYD_SE.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_CDE_SOURCE_VRFYD_SE</fullName>
    <active>true</active>
    <description>CDE_SOURCE_VRFYD_PAY is required when CDE_TYPE_VERIF is &quot;Written Verification&quot;</description>
    <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL( CDE_SOURCE_VRFYD_PAY__c, &apos;&apos;),
 ISPICKVAL(CDE_TYPE_VERIF__c, &apos;V&apos;),
 NOT(ISCHANGED(Total_Number_Of_Paystubs__c))
)</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_PAY__c</errorDisplayField>
    <errorMessage>How Verified is required if Verified is &apos;Written Verification&apos;</errorMessage>
</ValidationRule>