CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/Req_CDE_TYPE_VERIF.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_CDE_TYPE_VERIF</fullName>
    <active>true</active>
    <description>CDE_TYPE_VERIF is required for Self-Employment</description>
    <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL( CDE_TYPE_VERIF__c, &apos;&apos;),
 ISPICKVAL(CDE_STATUS__c, &apos;ACT&apos;),
 IDN_EMPLMT_INDIV__r.RecordType.DeveloperName = &apos;Self_Employment&apos;
)</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
    <errorMessage>Verified is required for Self Employment</errorMessage>
</ValidationRule>