CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/Req_CDE_TYPE_VERIF_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_CDE_TYPE_VERIF_2</fullName>
    <active>true</active>
    <description>CDE_TYPE_VERIF is required for Employment when AMT_INCOME_ANNUAL_ESTMD is not empty</description>
    <errorConditionFormula>AND(
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),
 NOT(IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),
 ISPICKVAL(CDE_TYPE_VERIF__c , &apos;&apos;),
 ISPICKVAL(CDE_STATUS__c, &apos;ACT&apos;),
 IDN_EMPLMT_INDIV__r.RecordType.DeveloperName = &apos;Employment&apos;,
 AMT_INCOME_ANNUAL_ESTMD__c &gt; 0 
)</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
    <errorMessage>When Estimated Income is used Verified is required</errorMessage>
</ValidationRule>