CHATS_SIT/force-app/main/default/objects/T_EMPLMT_INCOME__c/validationRules/Req_if_Estimated_Income_Frequency_is_HLY.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_if_Estimated_Income_Frequency_is_HLY</fullName>
    <active>true</active>
    <description>Required if CDE_FREQ_PAY_ESTMD = Hourly</description>
    <errorConditionFormula>AND( NOT( IDN_EMPLMT_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ), ISBLANK(CNT_WEEK_PER_HOURS_ESTMD__c) ,  ISPICKVAL(CDE_FREQ_PAY_ESTMD__c, &apos;HLY&apos;) )</errorConditionFormula>
    <errorDisplayField>CNT_WEEK_PER_HOURS_ESTMD__c</errorDisplayField>
    <errorMessage>Required if Estimated Income Frequency is Hourly</errorMessage>
</ValidationRule>